<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo_unisla"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_data_pisahkan_dengan_koma"
        android:inputType="text"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_bulan"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton3Months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_bulan" />

        <RadioButton
            android:id="@+id/radioButton4Months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_bulan" />

        <RadioButton
            android:id="@+id/radioButton5Months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_bulan" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonPredict"
        style="@style/tombol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prediksi"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewPrediction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prediksi_hasil"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

</LinearLayout>